# computer-graphics-homework

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  1.md  2.md  3.md  README.md  cg.py  generate_images.bash  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  python.yml
doc/: .gitignore  README.md  api.rst  index.rst
docs/: 1.md  2.md  3.md  api.rst  conf.py  index.rst  requirements.txt
requirements/: build.txt  dev.txt  version.txt
scripts/: generate_images.sh
src/computer_graphics_demo/: __init__.py  __main__.py  b.py  bezier.py  ellipse.py  fern.py  julia.py  koch.py  mandelbrot.py  reality.py  utils.py
src/computer_graphics_demo/circle/: __init__.py  bresenham.py  midpoint.py
src/computer_graphics_demo/fill/: __init__.py  scan.py  seed.py
src/computer_graphics_demo/line/: __init__.py  bresenham.py  midpoint.py
tests/: cmd_test.py
utils/: __init__.py  ellipse.py  fern.py  koch.py  mandelbrot.py  reality.py
utils/circle/: bresenham.py
utils/fill/: scan.py  seed.py
utils/line/: __init__.py  midpoint.py
