[build-system]
requires = ["setuptools >= 45", "setuptools_scm[toml] >= 6.2", "wheel"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "computer-graphics-demo"
description = "A demonstration of computer graphics."
authors = [{ name = "Wu Zhenyu", email = "wuzy01@qq.com" }]
readme = "README.md"
requires-python = ">= 3.6, < 3.10"
keywords = ["computer graphics"]
license = { text = "GPL v3" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://pypi.org/project/computer-graphics-demo/"
Download = "https://github.com/Freed-Wu/computer-graphics-homework/releases"
"Bug Report" = "https://github.com/Freed-Wu/computer-graphics-homework/issues"
Source = "https://github.com/Freed-Wu/computer-graphics-homework"

[tool.setuptools_scm]
write_to = "src/computer_graphics_demo/_version.py"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/dev.txt" }

[project.scripts]
cgdemo = "computer_graphics_demo.__main__:main"

[tool.black]
line-length = 79

[tool.pyright]
exclude = ["src"]
